# goose

./: CONTRIBUTING.md  Cargo.toml  README_cn.md
.github/: copilot-instructions.md
.github/workflows/: bundle-desktop-linux.yml  canary.yml  deploy-docs-and-extensions.yml  nightly.yml  release.yml
crates/goose/: Cargo.toml
crates/goose-acp/: Cargo.toml
crates/goose-acp/src/: server.rs
crates/goose-acp/tests/: common.rs  server_test.rs
crates/goose-acp/tests/test_data/: openai_builtin_execute.txt  openai_builtin_final.txt  openai_builtin_read_modules.txt  openai_builtin_search.txt  openai_session_description.json  openai_tool_call_response.txt
crates/goose-bench/: Cargo.toml
crates/goose-bench/src/: bench_session.rs
crates/goose-bench/src/runners/: eval_runner.rs
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose-cli/src/commands/: bench.rs  configure.rs  mod.rs  session.rs  term.rs  web.rs
crates/goose-cli/src/recipes/: extract_from_cli.rs
crates/goose-cli/src/scenario_tests/: mock_client.rs  scenario_runner.rs
crates/goose-cli/src/session/: builder.rs  export.rs  input.rs  mod.rs  prompt.rs
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/: lib.rs
crates/goose-mcp/src/developer/: rmcp_developer.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: openapi.rs  state.rs
crates/goose-server/src/routes/: agent.rs  audio.rs  config_management.rs  mod.rs  prompts.rs  recipe.rs  recipe_utils.rs  reply.rs  session.rs
crates/goose-test/: Cargo.toml
crates/goose/examples/: agent.rs  image_tool.rs
crates/goose/src/: model.rs  posthog.rs  prompt_template.rs  scheduler.rs  tool_inspection.rs  tool_monitor.rs
crates/goose/src/agents/: agent.rs  chatrecall_extension.rs  code_execution_extension.rs  execute_commands.rs  extension.rs  extension_manager.rs  extension_manager_extension.rs  final_output_tool.rs  mcp_client.rs  mod.rs  moim.rs  prompt_manager.rs  reply_parts.rs  skills_extension.rs  subagent_handler.rs  subagent_tool.rs  todo_extension.rs  tool_execution.rs
crates/goose/src/config/: base.rs  extensions.rs  mod.rs  permission.rs
crates/goose/src/context_mgmt/: mod.rs
crates/goose/src/conversation/: message.rs  mod.rs  tool_result_serde.rs
crates/goose/src/execution/: manager.rs
crates/goose/src/goose_apps/: mod.rs
crates/goose/src/permission/: permission_confirmation.rs  permission_inspector.rs  permission_judge.rs
crates/goose/src/providers/: base.rs  gcpvertexai.rs  openai.rs  openrouter.rs  provider_registry.rs  toolshim.rs  venice.rs
crates/goose/src/providers/canonical/data/: canonical_mapping_report.json  canonical_models.json
crates/goose/src/providers/formats/: anthropic.rs  bedrock.rs  databricks.rs  gcpvertexai.rs  google.rs  mod.rs  openai.rs  openai_responses.rs  snowflake.rs
crates/goose/src/recipe/build_recipe/: mod.rs
crates/goose/src/security/: scanner.rs  security_inspector.rs
crates/goose/src/session/: diagnostics.rs  session_manager.rs
crates/goose/tests/: agent.rs  mcp_integration_test.rs  providers.rs  repetition_inspector_tests.rs
crates/goose/tests/mcp_replays/: cargorun--quiet-pgoose-server--bingoosed--mcpdeveloper  github-mcp-serverstdio  npx-y@modelcontextprotocol_server-everything  uvxmcp-server-fetch
documentation/docs/getting-started/: using-extensions.md
documentation/docs/guides/: acp-clients.md  config-files.md  environment-variables.md  goose-cli-commands.md  using-gooseignore.md
documentation/docs/guides/recipes/: recipe-reference.md
documentation/docs/mcp/: _template_.mdx  brave-mcp.md  cloudflare-mcp.md  council-of-mine-mcp.md  google-drive-mcp.md  google-maps-mcp.md  jetbrains-mcp.md  postgres-mcp.md  prompts-chat-mcp.md  puppeteer-mcp.md  speech-mcp.md
documentation/docs/troubleshooting/: known-issues.md
documentation/docs/tutorials/: rpi.md
documentation/src/pages/recipes/data/recipes/: add-mcp-server.yaml
documentation/static/: servers.json
scripts/: test_compaction.sh  test_mcp.sh
ui/desktop/: README.md  forge.config.ts  openapi.json  package-lock.json  package.json
ui/desktop/src/: App.tsx  main.ts  preload.ts
ui/desktop/src/api/: index.ts  sdk.gen.ts  types.gen.ts
ui/desktop/src/components/: BaseChat.tsx  ChatInput.tsx  ConfigContext.tsx  ExtensionInstallModal.tsx  MentionPopover.tsx  ModelAndProviderContext.tsx  ToolCallWithResponse.tsx
ui/desktop/src/components/GooseSidebar/: AppSidebar.tsx
ui/desktop/src/components/McpApps/: McpAppRenderer.tsx  types.ts
ui/desktop/src/components/alerts/: AlertBox.tsx
ui/desktop/src/components/apps/: AppsView.tsx  StandaloneAppView.tsx
ui/desktop/src/components/sessions/: SessionsInsights.tsx
ui/desktop/src/components/settings/: PromptsSettingsSection.tsx  SettingsView.tsx
ui/desktop/src/components/settings/chat/: ChatSettingsSection.tsx  SpellcheckToggle.tsx
ui/desktop/src/components/settings/extensions/: utils.test.ts  utils.ts
ui/desktop/src/components/settings/extensions/subcomponents/: ExtensionItem.tsx  ExtensionList.tsx
ui/desktop/src/components/settings/models/: modelInterface.ts
ui/desktop/src/components/settings/models/subcomponents/: LeadWorkerSettings.tsx  SwitchModelModal.tsx
ui/desktop/src/components/settings/providers/modal/subcomponents/forms/: CustomProviderForm.tsx
ui/desktop/src/components/ui/: Diagnostics.tsx  sidebar.tsx
ui/desktop/src/hooks/: useChatStream.ts
ui/desktop/src/utils/: settings.ts
