[package]
name = "goose-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bin]]
name = "goose"
path = "src/main.rs"

[dependencies]
goose = { path = "../goose" }
goose-acp = { path = "../goose-acp" }
goose-bench = { path = "../goose-bench" }
goose-mcp = { path = "../goose-mcp" }
rmcp = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
cliclack = "0.3.5"
console = "0.16.1"
uuid = { version = "1.11", features = ["v4"] }
dotenvy = "0.15.7"
bat = "0.25.0"
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_yaml = "0.9"
tempfile = "3"
etcetera = { workspace = true }
rand = "0.8.5"
rustyline = "15.0.0"
tracing = { workspace = true }
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "0.2"
shlex = "1.3.0"
async-trait = "0.1.89"
base64 = "0.22.1"
regex = "1.11.1"
tar = "0.4"
# Web server dependencies
axum = { version = "0.8.1", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs", "auth"] }
http = "1.0"
webbrowser = {workspace = true}
indicatif = "0.18.1"
tokio-util = { version = "0.7.15", features = ["compat", "rt"] }
anstream = "0.6.18"
open = "5.3.2"
urlencoding = "2.1"
clap_complete = "4.5.62"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }

[features]
# disables the update command
disable-update = []

[dev-dependencies]
tempfile = "3"
temp-env = { version = "0.3.6", features = ["async_closure"] }
test-case = "3.3"
tokio = { workspace = true }
serial_test = { workspace = true }
