[package]
name = "goose-test"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bin]]
name = "capture"
path = "src/bin/capture.rs"

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
serde_json = { workspace = true }
